--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="hero--content">
             <h3>Hello, It's Me</h3>
             <h1>Bargii</h1>
-            <h3>And I'm a <span>Frontend Developer</span></h3>
+            <h3>And I'm a <span class="multiple--text"></span></h3>
             <p>Quis quis id ad quis culpa magna occaecat sint in ullamco id minim. Aliqua amet commodo irure enim ex magna aliqua. 
                 Do reprehenderit dolore ullamco fugiat aliquip in eu tempor tempor est adipisicing consectetur aliqua do. 
                 Veniam labore id laborum enim minim fugiat consequat commodo eiusmod officia. 
@@ -55,7 +55,8 @@
             <a href="" class="button">Download CV</a>
         </div>
         <div class="hero--image">
-            <img src="/img/hero.png" alt="hero.png">
+            <!-- <img src="/img/hero.png" alt="hero.png"> -->
+            <i class='bx bxs-user-circle' ></i>
         </div>
     </section>
     <!-- Hero section -->
@@ -63,7 +64,8 @@
     <!-- About -->
     <section class="about" id="about">
         <div class="about--image">
-            <img src="/img/hero.png" alt="hero.png">
+            <!-- <img src="/img/hero.png" alt="hero.png"> -->
+            <i class='bx bxs-user-circle' ></i>
         </div>
         <div class="about--content">
            <h2 class="heading">About <span>Me</span></h2>
@@ -73,7 +75,128 @@
         </div>
     </section>
     <!-- About -->
+
+    <!-- Skills -->
+    <section class="skills" id="skills">
+        <h2 class="heading">My <span>skills</span></h2>
+
+        <div class="skills--container">
+
+            <!-- HTML Card -->
+            <div class="skill--card">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+                <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p>
+                <a href="#" class="button">Read More</a>
+            </div>
+
+            <!-- HTML Card -->
+            <div class="skill--card">
+                <i class='bx bx-paint-roll' ></i>
+                <h3>UI/UX Design</h3>
+                <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p>
+                <a href="#" class="button">Read More</a>
+            </div>
+
+            <!-- HTML Card -->
+            <div class="skill--card">
+                <i class='bx bxl-javascript' ></i>
+                <h3>JS Enthusiast</h3>
+                <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p>
+                <a href="#" class="button">Read More</a>
+            </div>
+
+            <!-- HTML Card -->
+            <div class="skill--card">
+                <i class='bx bx-code-curly' ></i>
+                <h3>C#</h3>
+                <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p>
+                <a href="#" class="button">Read More</a>
+            </div>
+        </div>
+    </section>
+    <!-- Skills -->
+
+    <!-- Portfolio -->
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Greatest <span>Projects</span></h2>
+
+        <div class="portfolio--container">
+            <!-- Portfolio Card -->
+            <div class="portfolio--card">
+                <img src="img/portfolio1.jpg" alt="ss--project.png">
+                <div class="portfolio--layer">
+                    <h4>Domain</h4>
+                    <p>Tempor aliquip enim consequat ipsum sit aliqua sunt eu labore anim eu adipisicing consequat excepteur.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+
+            <!-- Portfolio Card -->
+            <div class="portfolio--card">
+                <img src="img/portfolio1.jpg" alt="ss--project.png">
+                <div class="portfolio--layer">
+                    <h4>Domain</h4>
+                    <p>Tempor aliquip enim consequat ipsum sit aliqua sunt eu labore anim eu adipisicing consequat excepteur.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+
+            <!-- Portfolio Card -->
+            <div class="portfolio--card">
+                <img src="img/portfolio1.jpg" alt="ss--project.png">
+                <div class="portfolio--layer">
+                    <h4>Domain</h4>
+                    <p>Tempor aliquip enim consequat ipsum sit aliqua sunt eu labore anim eu adipisicing consequat excepteur.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+
+            <!-- Portfolio Card -->
+            <div class="portfolio--card">
+                <img src="img/portfolio1.jpg" alt="ss--project.png">
+                <div class="portfolio--layer">
+                    <h4>Domain</h4>
+                    <p>Tempor aliquip enim consequat ipsum sit aliqua sunt eu labore anim eu adipisicing consequat excepteur.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Portfolio -->
     
+    <!-- Contact -->
+    <section class="contact" id="contact">
+        <h2 class="heading">Get In Touch With <span>Me</span></h2>
+        
+        <form action="#">
+            <div class="input--box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Address">
+            </div>
+            <div class="input--box">
+                <input type="number" placeholder="Mobile Number">
+                <input type="text" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="button">
+        </form>
+    </section>
+    <!-- Contact -->
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer--content">
+            <p>&copy; George-Marius Baranga | ChatGPT friendly user</p>
+        </div>
+        <div class="footer--topIcon">
+            <a href="#home"><i class='bx bx-up-arrow-alt' ></i></a>
+        </div>
+    </footer>
+    <!-- Footer -->
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
     <!-- Func. script.js -->
     <script defer src="script.js"></script>
     <!-- Func. script.js -->
