--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <header class="header">
 
         <!-- Logo -->
-        <a href="#" class="logo">Portfolio</a>
+        <div class="logo">
+            <img src="img/logo.png" alt="">
+        </div>
+        
         <!-- Logo -->
 
         <i class='bx bx-menu' id="icon-menu"></i>
