Modal and portfolio cards fixed

--- a/index.html
+++ b/index.html
@@ -84,13 +84,10 @@
             <p>
                 Phone
                 +40755824572
-                <br>
                 Email
                 baranga.georgemarius@gmail.com
-                <br>
                 Github
                 github.com/bargog29
-                <br>
                 Linkedin
                 inkedin.com/in/baranga-george-marius/
             </p>
@@ -111,7 +108,7 @@
             <div class="skill--card">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
-                <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p>
+                <!-- <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p> -->
                 <a href="#" class="button">Read More</a>
             </div>
 
@@ -119,7 +116,7 @@
             <div class="skill--card">
                 <i class='bx bx-paint-roll' ></i>
                 <h3>UI/UX Design</h3>
-                <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p>
+                <!-- <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p> -->
                 <a href="#" class="button">Read More</a>
             </div>
 
@@ -127,7 +124,7 @@
             <div class="skill--card">
                 <i class='bx bxl-javascript' ></i>
                 <h3>JS Enthusiast</h3>
-                <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p>
+                <!-- <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p> -->
                 <a href="#" class="button">Read More</a>
             </div>
 
@@ -135,7 +132,7 @@
             <div class="skill--card">
                 <i class='bx bx-code-curly' ></i>
                 <h3>C#</h3>
-                <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p>
+                <!-- <p>Ad sint eu do quis cillum non id cupidatat veniam consequat culpa. Lorem et et ullamco id quis laboris duis proident laborum magna. Aliqua irure sunt culpa veniam enim incididunt in est dolor non non deserunt. Labore commodo consectetur irure mollit amet minim officia ad minim do.</p> -->
                 <a href="#" class="button">Read More</a>
             </div>
         </div>
@@ -149,33 +146,43 @@
         <div class="portfolio--container">
             <!-- Portfolio Card -->
             <div class="portfolio--card">
-                <img src="img/portfolio1.jpg" alt="ss--project.png">
+                <img src="img/P_gmbistro.png" alt="ss--project.png">
                 <div class="portfolio--layer">
-                    <h4>Domain</h4>
-                    <p>Tempor aliquip enim consequat ipsum sit aliqua sunt eu labore anim eu adipisicing consequat excepteur.</p>
+                    <h4>Web Development</h4>
+                    <p>GMBistro: User-Friendly Web App with Forkify API Integration, MVC Architecture, and Responsive Design</p>
                     <a href="#"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
             <!-- Portfolio Card -->
             <div class="portfolio--card">
-                <img src="img/portfolio1.jpg" alt="ss--project.png">
+                <img src="img/P_bmgym.png" alt="ss--project.png">
                 <div class="portfolio--layer">
-                    <h4>Domain</h4>
-                    <p>Tempor aliquip enim consequat ipsum sit aliqua sunt eu labore anim eu adipisicing consequat excepteur.</p>
+                    <h4>Facial Recognition C#</h4>
+                    <p>BMGym: Innovative Gym Application with Facial Recognition Using C#, .NET, and MySQL</p>
                     <a href="#"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
 
             <!-- Portfolio Card -->
             <div class="portfolio--card">
-                <img src="img/portfolio1.jpg" alt="ss--project.png">
+                <img src="img/P_SnakeMiniGame.png" alt="ss--project.png">
                 <div class="portfolio--layer">
-                    <h4>Domain</h4>
-                    <p>Tempor aliquip enim consequat ipsum sit aliqua sunt eu labore anim eu adipisicing consequat excepteur.</p>
+                    <h4>Simple Snake C#</h4>
+                    <p>Mastered Two-Dimensional Array Application: Created a dynamic Snake mini-game in C# using the .NET framework, demonstrating strong programming and game development skills</p>
                     <a href="#"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
+
+            <!-- Portfolio Card
+            <div class="portfolio--card">
+                <img src="img/portfolio1.jpg" alt="ss--project.png">
+                <div class="portfolio--layer">
+                    <h4>Name</h4>
+                    <p>lbblblblblbl</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div> -->
         </div>
     </section>
     <!-- Portfolio -->
