--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    
     <!-- Header -->
     <header class="header">
 
@@ -75,7 +76,7 @@
     <!-- Hero section -->
 
     <!-- About -->
-    <section class="about" id="about">
+    <section class="about section section--hidden" id="about">
         <div class="about--image">
             <img src="/img/hero1.png" alt="hero.png">
         </div>
@@ -118,7 +119,7 @@
     <!-- About -->
 
     <!-- Skills -->
-    <section class="skills" id="skills">
+    <section class="skills section section--hidden" id="skills">
         <h2 class="heading">My <span>skills</span></h2>
 
         <div class="skills--container">
@@ -131,7 +132,7 @@
                     of ideas,
                     known for a calm and patient approach.
                 </p>
-                <a href="#" class="button">Read More</a>
+                <!-- <a href="#" class="button">Read More</a> -->
             </div>
 
             <!-- HTML Card -->
@@ -139,7 +140,7 @@
                 <i class='bx bxs-file-doc'></i>
                 <h3>Microsoft Office Suite</h3>
                 <p>Proficient in using Microsoft Office tools for documentation and data analysis.</p>
-                <a href="#" class="button">Read More</a>
+                <!-- <a href="#" class="button">Read More</a> -->
             </div>
 
             <!-- HTML Card -->
@@ -148,7 +149,7 @@
                 <h3>OOP Principles, Data Structures</h3>
                 <p>Skilled in object-oriented programming (OOP) and data structures, optimizing code efficiency and
                     organization.</p>
-                <a href="#" class="button">Read More</a>
+                <!-- <a href="#" class="button">Read More</a> -->
             </div>
 
             <!-- HTML Card -->
@@ -157,7 +158,7 @@
                 <h3>Continuous Improvement</h3>
                 <p>Committed to personal and professional growth, always seeking ways to enhance skills and knowledge.
                 </p>
-                <a href="#" class="button">Read More</a>
+                <!-- <a href="#" class="button">Read More</a> -->
             </div>
 
             <!-- HTML Card -->
@@ -166,7 +167,7 @@
                 <h3>Easily Adaptable</h3>
                 <p>Quick to learn and adjust to new technologies and environments, ensuring seamless transitions and
                     efficiency.</p>
-                <a href="#" class="button">Read More</a>
+                <!-- <a href="#" class="button">Read More</a> -->
             </div>
 
             <!-- HTML Card -->
@@ -175,7 +176,7 @@
                 <h3>Web Development</h3>
                 <p>Passionate about creating responsive and dynamic websites using HTML, CSS, and JavaScript to provide
                     engaging user experiences.</p>
-                <a href="#" class="button">Read More</a>
+                <!-- <a href="#" class="button">Read More</a> -->
             </div>
 
             <!-- HTML Card -->
@@ -184,16 +185,7 @@
                 <h3>UI/UX Design</h3>
                 <p>Dedicated to crafting intuitive and visually appealing user interfaces, focusing on user-centered
                     design principles for exceptional user experiences.</p>
-                <a href="#" class="button">Read More</a>
-            </div>
-
-            <!-- HTML Card -->
-            <div class="skill--card">
-                <i class='bx bxl-javascript'></i>
-                <h3>JS Enthusiast</h3>
-                <p>Enthusiastic about JavaScript and its versatility, specializing in creating interactive and dynamic
-                    web applications to enhance user interactivity.</p>
-                <a href="#" class="button">Read More</a>
+                <!-- <a href="#" class="button">Read More</a> -->
             </div>
 
             <!-- HTML Card -->
@@ -202,14 +194,14 @@
                 <h3>C#, C++, MySQL</h3>
                 <p>Experienced in C#, C++ programming, developing desktop applications and back-end solutions with a
                     focus on efficiency and reliability, with MySQL integration.</p>
-                <a href="#" class="button">Read More</a>
+                <!-- <a href="#" class="button">Read More</a> -->
             </div>
         </div>
     </section>
     <!-- Skills -->
 
     <!-- Portfolio -->
-    <section class="portfolio" id="portfolio">
+    <section class="portfolio section section--hidden" id="portfolio">
         <h2 class="heading">Greatest <span>Projects</span></h2>
 
         <div class="portfolio--container">
@@ -220,7 +212,7 @@
                     <h4>Web Development</h4>
                     <p>GMBistro: User-Friendly Web App with Forkify API Integration, MVC Architecture, and Responsive
                         Design</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/bargog29/gmbistro-forkifyapi"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -230,7 +222,7 @@
                 <div class="portfolio--layer">
                     <h4>Facial Recognition C#</h4>
                     <p>BMGym: Innovative Gym Application with Facial Recognition Using C#, .NET, and MySQL</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/bargog29/licenta-FacialRecognitionCSharpEmguCVGymRecords"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -241,7 +233,7 @@
                     <h4>Simple Snake C#</h4>
                     <p>Mastered Two-Dimensional Array Application: Created a dynamic Snake mini-game in C# using the
                         .NET framework, demonstrating strong programming and game development skills</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/bargog29/snake-c-sharp"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -259,7 +251,7 @@
     <!-- Portfolio -->
 
     <!-- Contact -->
-    <section class="contact" id="contact">
+    <section class="contact section section--hidden" id="contact">
         <h2 class="heading">Get In Touch With <span>Me</span></h2>
 
         <form action="#">
@@ -280,7 +272,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer--content">
-            <p>&copy; George-Marius Baranga | ChatGPT friendly user</p>
+            <p>&copy;2023 George-Marius Baranga | Portfolio/Presentation Website</p>
         </div>
         <div class="footer--topIcon">
             <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
@@ -288,7 +280,9 @@
     </footer>
     <!-- Footer -->
 
+    <!-- Typing animation script -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <!-- Typing animation script -->
 
     <!-- Func. script.js -->
     <script defer src="script.js"></script>
